--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "markdown-pdf.styles": [
         "https://cyruscyliu.github.io/styles/light-default.css"
-    ], 
+    ],
+    "markdown-pdf.convertOnSave": true,
+    "markdown-pdf.type": [
+        "html"
+    ],
+    
 }
