fix some display issues

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,3 +3,5 @@ theme:
 docs_dir: content
 site_name: Qiang Liu's Homepage
 site_url: https://github.com/cyruscyliu/cyruscyliu.github.io
+nav:
+    - Home: 'index.md'
