--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,11 @@
 theme:
     name: material
+    features:
+        - navigation.tabs
+        - navigation.tabs.sticky
+        - navigation.tracking
+    font:
+        text: Fira Code
 docs_dir: content
 site_name: Qiang Liu's Homepage
 site_url: https://github.com/cyruscyliu/cyruscyliu.github.io
