--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -70,12 +70,13 @@ nav:
     - Home: index.md
     - Projects: projects/index.md
     - Services: services.md
-    - Blogs:
-      - blog/index.md
+    - Blog:
+      - blog/index.md 
       - Tags: blog/tags.md
 plugins:
   - blog:
       blog_toc: true
       post_excerpt: optional
+      draft_on_serve: false
   - tags
 copyright: "Copyright &copy; 2018 - 2025, Qiang Liu. All rights reserved."
