--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -64,7 +64,7 @@ markdown_extensions:
     - pymdownx.details
     - pymdownx.superfences
 docs_dir: docs
-site_name: Qiang Liu - System Security | Problem Solver
+site_name: Qiang Liu - System Security
 site_url: https://github.com/cyruscyliu/cyruscyliu.github.io
 nav:
     - Home: index.md
