--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,14 +17,10 @@ theme:
     logo: logo.png
     favicon: logo.png
     features:
-    - navigation.tracking
-    - navigation.path
+    - navigation.tabs
+    - navigation.tabs.sticky
     - navigation.top
-    - navigation.footer
-    - navigation.indexes
     - navigation.expand
-    - toc.integrate
-    - footer.prev_next
     - revision.date
     - revision.history
 extra:
@@ -64,15 +60,12 @@ markdown_extensions:
     - pymdownx.details
     - pymdownx.superfences
 docs_dir: docs
-site_name: Qiang Liu - System Security
+site_name: Qiang Liu - The Wind Rises
 site_url: https://github.com/cyruscyliu/cyruscyliu.github.io
 nav:
     - Home: index.md
-    - Projects: projects/index.md
-    - Services: services.md
     - Blog:
       - blog/index.md 
-      - Tags: blog/tags.md
 plugins:
   - blog:
       blog_toc: true
